# machine_learning

./: .gitignore  README.md  manual_font_fix.py  pyproject.toml  requirements.txt  安装说明.md  快速入门指南.md
01_基础概念/: 机器学习概述.md
02_监督学习/: 监督学习详解.md
03_无监督学习/: 无监督学习详解.md
04_强化学习/: 强化学习详解.md
05_深度学习/: 深度学习基础.md
06_实践项目/: 项目列表.md
06_实践项目/01_房价预测/: 房价预测项目.md
fastbook/clean/: 01_intro.ipynb
fastbook/translations/cn/: 01_intro.md
product_type/: README.md  deploy_app.py  install_autodl.sh  main.py  optimize_training.py  pyproject.toml  quick_train.py  requirements.txt  run_training.py  test_model_fix.py  test_save_fix.py
product_type/config/: model_config.yaml
product_type/data/: data_stats.json
product_type/docs/: Windows部署指南.md
product_type/src/: inference.py  model.py  train.py
product_type/static/: index.html
产品分类项目/: deploy_app.py  requirements.txt  run_inference.py  run_training.py  validate_data.py
产品分类项目/data/: test.csv  val.csv
产品分类项目/scripts/: data_preprocess.py
产品分类项目/src/: dataset.py  inference.py  model.py  modelscope_utils.py  train.py
代码示例/: README.md  requirements.txt  utils.py  分类算法对比.py  线性回归示例.py  聚类算法实践.py
学习计划/: 学习进度跟踪.md
