[project]
name = "product-type"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.12.0",
    "black>=25.11.0",
    "colorama>=0.4.6",
    "datasets>=4.4.1",
    "fastapi>=0.122.0",
    "flake8>=7.3.0",
    "gputil>=1.4.0",
    "jieba>=0.42.1",
    "matplotlib>=3.10.7",
    "modelscope>=1.32.0",
    "numpy>=2.2.6",
    "onnx>=1.19.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pathlib2>=2.3.7.post1",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.1",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "wandb>=0.23.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
torch = { path = "C:/Users/cxlon/Downloads/torch-2.8.0+cu128-cp310-cp310-win_amd64.whl" }
torchaudio = { path = "C:/Users/cxlon/Downloads/torchaudio-2.8.0+cu128-cp310-cp310-win_amd64.whl" }
torchvision = { path = "C:/Users/cxlon/Downloads/torchvision-0.23.0+cu128-cp310-cp310-win_amd64.whl" }
